--- a/include/base.scss
+++ b/include/base.scss
@@ -223,6 +223,8 @@ textarea {height: 150px; padding-top: 15px; resize: none;}
 
 }
 
+.swiper-wrapper {margin: 0px;}
+
 @media screen and (max-width: 1200px) {
 
     .ems-container {padding-left: 20px; padding-right: 20px;}
