--- a/include/product-detail.scss
+++ b/include/product-detail.scss
@@ -226,7 +226,7 @@
 
 // content
 
-.product-table {margin-top: 30px; border: 1px solid $color-4;
+.product-table {margin-top: 30px; border: 1px solid $color-4; color: #757575; 
 
     > div {padding: 10px 24px;
 
@@ -247,7 +247,7 @@
 
     h3 {font-weight: bold;}
 
-    .product-text-table {
+    .product-text-table {color: #757575;
 
         .row {border: 1px solid $color-5;
         
