--- a/style.css
+++ b/style.css
@@ -318,6 +318,9 @@ textarea {
   margin-bottom: 15px;
   position: relative; }
 
+.swiper-wrapper {
+  margin: 0px; }
+
 @media screen and (max-width: 1200px) {
   .ems-container {
     padding-left: 20px;
@@ -1184,7 +1187,7 @@ button.toast-close-button {
 
 .member {
   position: absolute;
-  right: 40px;
+  right: 0px;
   top: -83px;
   height: 83px;
   width: 275px;
@@ -1606,7 +1609,14 @@ button.toast-close-button {
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%; }
   .header-logo {
-    width: 100px; }
+    -webkit-box-flex: 1.7;
+    -webkit-flex: 1.7;
+    -ms-flex: 1.7;
+    flex: 1.7;
+    text-align: center; }
+    .header-logo a {
+      display: inline-block;
+      width: 100px; }
   .header-top .logo,
   .header-top .nav {
     height: 70px; }
@@ -1695,30 +1705,38 @@ button.toast-close-button {
   .mbHeader,
   .mbCart {
     display: block;
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1; }
   .mbHeader {
     font-size: 29px; }
-  .mbCart a {
-    font-size: 27px; }
-  .mbCart b {
-    left: 0px;
-    top: 3px;
-    width: 100%;
-    height: 100%;
-    font-size: 13px;
-    font-weight: normal;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
+    .mbHeader .mbBack {
+      display: none; }
+  .mbCart {
+    text-align: right; }
+    .mbCart a {
+      font-size: 27px; }
+    .mbCart b {
+      left: 0px;
+      top: 3px;
+      width: 100%;
+      height: 100%;
+      font-size: 13px;
+      font-weight: normal;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
   .header-bottom .search {
     min-height: 70px; }
     .header-bottom .search input {
@@ -1797,13 +1815,17 @@ button.toast-close-button {
     font-size: 12px;
     line-height: 2.5;
     font-weight: bold; }
-  .footer-bottom .category ul {
+  .footer-bottom .category > ul {
     -webkit-column-count: 3;
     -moz-column-count: 3;
     column-count: 3;
     -webkit-column-gap: 50px;
     -moz-column-gap: 50px;
     column-gap: 50px; }
+    .footer-bottom .category > ul ul {
+      display: none; }
+  .footer-bottom .category .icon-right-arrow {
+    display: none; }
 
 .footer-address {
   border-top: 1px solid #D9D9D9; }
@@ -2576,30 +2598,34 @@ button.toast-close-button {
 .home-content {
   padding-left: 30px; }
 
-.main-slider {
-  font-size: 0px; }
-  .main-slider img {
-    visibility: hidden; }
-  .main-slider h3 {
-    font-size: 36px;
-    font-weight: 700;
-    color: #FFFFFF;
-    line-height: 1;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    max-width: 570px; }
-  .main-slider .content-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%; }
-  .main-slider > .swiper-pagination-bullets {
-    bottom: 40px; }
-  .main-slider .swiper-button-prev {
-    left: 30px; }
-  .main-slider .swiper-button-next {
-    right: 30px; }
-  .main-slider .cover {
-    background-size: cover; }
+.main-slider img {
+  visibility: hidden; }
+
+.main-slider h3 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 1;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  max-width: 570px; }
+
+.main-slider .content-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
+.main-slider > .swiper-pagination-bullets {
+  bottom: 40px; }
+
+.main-slider .swiper-button-prev {
+  left: 30px; }
+
+.main-slider .swiper-button-next {
+  right: 30px; }
+
+.main-slider .cover {
+  background-size: cover; }
 
 .swiper-wrapper {
   padding-left: 0px;
@@ -2632,6 +2658,21 @@ button.toast-close-button {
     font-size: 30px;
     margin-right: 20px;
     margin-left: 0px; }
+  .pay-type-list .icon-cart,
+  .pay-type-list .icon-lock {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1; }
+  .pay-type-list .icon-money {
+    -webkit-box-flex: 1.5;
+    -webkit-flex: 1.5;
+    -ms-flex: 1.5;
+    flex: 1.5;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
 
 .background-banner-list .background-banner-item {
   width: calc(50% - 15px);
@@ -2664,6 +2705,11 @@ button.toast-close-button {
     bottom: 20px; }
   .pay-type-list {
     padding: 20px 25px; }
+    .pay-type-list .icon-money {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1; }
   .home-content {
     padding-left: 0px; }
   .background-banner-list .background-banner-item {
@@ -2803,7 +2849,7 @@ button.toast-close-button {
 .navigation {
   min-height: 50px;
   line-height: 50px;
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid #F3F3F3;
   color: #9B9B9B; }
   .navigation .navigasyon {
     font-size: 13px; }
@@ -2835,7 +2881,8 @@ button.toast-close-button {
     font-size: 13px;
     color: #9B9B9B; }
     .presentation .ems-prd-list-sort .sStylerMainWrp {
-      border: none; }
+      border: none;
+      color: #9B9B9B; }
       .presentation .ems-prd-list-sort .sStylerMainWrp .sStylerWrp {
         position: relative;
         padding-left: 10px;
@@ -2876,6 +2923,7 @@ button.toast-close-button {
   flex-basis: 70px; }
 
 .tekli .product-code-group {
+  font-weight: 600;
   padding-left: 20px;
   text-align: left;
   -webkit-flex-basis: 300px;
@@ -2919,6 +2967,10 @@ button.toast-close-button {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   font-size: 14px;
   color: #9B9B9B; }
 
@@ -2988,7 +3040,7 @@ button.toast-close-button {
 
 .page-product-list .menuKategori .s2 > a {
   font-size: 15px;
-  font-weight: bold; }
+  font-weight: 600; }
 
 .page-product-list .menuKategori .s3 > a {
   font-size: 14px;
@@ -3227,8 +3279,14 @@ button.toast-close-button {
       margin: 0px; } }
 
 @media screen and (max-width: 768px) {
-  .no-swiper .swiper-wrapper .swiper-slide {
-    width: calc(50% - 5px); }
+  .no-swiper {
+    margin-bottom: 40px; }
+    .no-swiper .swiper-wrapper .swiper-slide {
+      width: calc(50% - 5px);
+      height: auto;
+      margin-bottom: 0px; }
+      .no-swiper .swiper-wrapper .swiper-slide .ems-prd-inner {
+        height: calc(100% - 40px); }
   .swiper-title {
     text-align: center; }
   .product-item .ems-prd-name a {
@@ -3603,7 +3661,8 @@ button.toast-close-button {
 
 .product-table {
   margin-top: 30px;
-  border: 1px solid #F3F3F3; }
+  border: 1px solid #F3F3F3;
+  color: #757575; }
   .product-table > div {
     padding: 10px 24px; }
     .product-table > div > div {
@@ -3623,15 +3682,17 @@ button.toast-close-button {
 .product-text h3 {
   font-weight: bold; }
 
-.product-text .product-text-table .row {
-  border: 1px solid #D9D9D9; }
-  .product-text .product-text-table .row:last-child {
-    border-top: 0px; }
-  .product-text .product-text-table .row .col {
-    border-left: 1px solid #D9D9D9;
-    padding: 17px 25px; }
-    .product-text .product-text-table .row .col:first-child {
-      border-left: none; }
+.product-text .product-text-table {
+  color: #757575; }
+  .product-text .product-text-table .row {
+    border: 1px solid #D9D9D9; }
+    .product-text .product-text-table .row:last-child {
+      border-top: 0px; }
+    .product-text .product-text-table .row .col {
+      border-left: 1px solid #D9D9D9;
+      padding: 17px 25px; }
+      .product-text .product-text-table .row .col:first-child {
+        border-left: none; }
 
 .navigation-js {
   display: -webkit-box;
