--- a/include/product-list.scss
+++ b/include/product-list.scss
@@ -46,7 +46,7 @@
     
     }
 
-    .ems-prd-button {visibility: hidden; opacity: 0; transition: all 0.1s ease; margin-top: 15px;}
+    .ems-prd-button {visibility: hidden; opacity: 0; transition: all 0.1s ease; margin-top: 15px; text-transform: uppercase;}
 
     .urunListe_adet {display: none;}
 
