--- a/include/header.scss
+++ b/include/header.scss
@@ -367,7 +367,7 @@
 
     .header-top .logo {display: block; flex-basis: 100%;}
 
-    .header-logo {flex: 1.7; text-align: center;
+    .header-logo {flex: 1; text-align: center;
 
         a {display: inline-block; width: 100px;}
 
@@ -451,9 +451,13 @@
     .mbHeader,
     .mbCart {display: block; color: $color-3; flex: 1;}
 
-    .mbHeader {font-size: 29px;
+    .mbHeader {font-size: 25px;
     
-        .mbBack {display: none;}
+        .mbBack {display: none;
+        
+            i::before {margin: 0px;}
+        
+        }
     
     }
 
